# Retro-Lite-CM5

./: .gitignore  LICENSE  README.md  TPS65987D_Standard.pjt  Type-C Test Fixture (TPS65987D)_v1.brd  armbian-config.patch  rk3588s-retro-lite-cm5.dts
ATTiny84_power/: .clang-format  platformio.ini
ATTiny84_power/src/: bq24292i.c  bq24292i.cpp  bq24292i.h  main.c  main.cpp
ET055FH06-GT/: ET055FH06-GT-Timings.xlsx  Flex v2.brd  Flex v2.sch
HID-Controller/: platformio.ini
HID-Controller/patched/: USBCore.cpp  retrolitecm5.json
HID-Controller/src/: ATMEGA32u4.cpp  Multiaxis.cpp  Multiaxis.h  calibration.cpp
KD055HDFIA001-C001A/: KD055HDFIA001-C001A- 5.5 Inch MIPI (Radxa CM5 Driver Board).brd  KD055HDFIA001-C001A- 5.5 Inch MIPI (Radxa CM5 Driver Board).sch
armbian/: defconfig.patch  retrolite.patch
armbian/userpatches/: customize-image.sh
cm5_carrier_pcb/: README.md  Retro Lite CM5 Fan FFC.brd  Retro Lite CM5 Fan FFC.sch  RetroLiteCM5IOFinal.sch  RetroLiteCM5IOFinal_v2.sch  RetroLiteCM5IOFinal_v3.sch  Retro_Lite_CM5_IO_X2.2.brd  Retro_Lite_CM5_IO_X2.2.sch  Retro_Lite_CM5_IO_X2.2_BOM.csv  Retro_Lite_CM5_IO_X2.2_CPL.csv
enclosure/: README.md
enclosure/STEP/: A.step  B.step  Battery Bracket.step  Case Front.step  X.step  (+15 more)
rp2040_gamepad/: CMakeLists.txt  Retro_Lite_CM5_Right_PCB_v1 - BOM.csv  tusb_config.h
rp2040_gamepad/PCB/: Retro_Lite_CM5_Left_PCB_v1 - RP2040.brd  Retro_Lite_CM5_Right_PCB_v1 - BOM.csv  Retro_Lite_CM5_Right_PCB_v1 - RP2040.brd
rp2040_gamepad/PCB/v1/: Retro_Lite_CM5_Left_PCB_v1 - BOM.csv  Retro_Lite_CM5_Left_PCB_v1 - RP2040.sch  Retro_Lite_CM5_Right_PCB_v1 - RP2040.sch
rp2040_gamepad/src/: consumer.cpp  gamepad.cpp  gamepad.h  keyboard.cpp  main.cpp  mouse.cpp  toggle.h  usb_descriptors.cpp  usb_descriptors.h
rp2040_gamepad/src/imu/: I2Cdev.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps612.cpp  MPU6050_6Axis_MotionApps612.h  calibration.cpp  helper_3dmath.h
rp2040_gamepad/src/tracking/: calibration_data.cc  calibration_data.h  main_loop.cc  main_loop.h
rp2040_gamepad/src/tracking/sensors/: sensor_fusion_ekf.cc  sensor_fusion_ekf.h
rp2040_gamepad/src/tracking/util/: logging.h
tps65987d/: README.md  TPS65987D_Standard.pjt  Type-C Test Fixture (TPS65987D)_v1.sch  Type-C Test Fixture (TPS65987D)_v2.brd  Type-C Test Fixture (TPS65987D)_v2.sch  Type-C Test Fixture (TPS65987D)_v3.brd  Type-C Test Fixture (TPS65987D)_v3.sch  Type-C Test Fixture (TPS65987D)_v3_BOM.csv  Type-C Test Fixture (TPS65987D)_v3_BOM.xlsx
(+340 files in other folders)
